# aiprojects

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  cli.py  deploy.sh  env.example  example_usage.py  index.html  railway.json  sample_funds.csv  sec_client.py  setup.py  start_frontend.py
constellation_ai/mvp_cai_2/backend/: README.md  alembic.ini  pyproject.toml
constellation_ai/mvp_cai_2/backend/alembic/: env.py
constellation_ai/mvp_cai_2/backend/alembic/versions/: 001_initial_schema.py  002_add_events.py  003_add_pipeline.py
constellation_ai/mvp_cai_2/backend/app/: config.py  database.py  dependencies.py  main.py
constellation_ai/mvp_cai_2/backend/app/auth/: __init__.py  entra.py  rbac.py
constellation_ai/mvp_cai_2/backend/app/models/: __init__.py  activity.py  attachment.py  audit.py  contact.py  event.py  followup.py  organization.py  pipeline.py  tag.py  user.py
constellation_ai/mvp_cai_2/backend/app/routers/: __init__.py  activities.py  attachments.py  audit.py  contacts.py  document_parsing.py  events.py  export.py  followups.py  health.py  organizations.py  pipeline.py  search.py  tags.py  users.py
constellation_ai/mvp_cai_2/backend/app/schemas/: __init__.py  activity.py  attachment.py  contact.py  event.py  followup.py  organization.py  pipeline.py  search.py  tag.py  user.py
constellation_ai/mvp_cai_2/backend/app/services/: __init__.py  audit_service.py  blob_service.py  (+4 more)
constellation_ai/mvp_cai_2/backend/tests/: conftest.py  test_activities.py  test_audit.py  test_auth.py  test_followups.py  test_organizations.py  test_rbac.py  test_tags.py
(+183 files in other folders)
